More MINGW enhancements.

--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -143,6 +143,7 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
 LIBEXEC_DIR = @LIBEXEC_DIR@
 LIBLTDL = @LIBLTDL@
+LIBRARY_EXTRA_CPPFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
 LIBSTDCLDFLAGS = @LIBSTDCLDFLAGS@
 LIBTOOL = @LIBTOOL@
 LIB_BZLIB = @LIB_BZLIB@
@@ -187,6 +188,7 @@ MANDelegate = @MANDelegate@
 MAN_DIR = @MAN_DIR@
 MICRO_VERSION = @MICRO_VERSION@
 MINOR_VERSION = @MINOR_VERSION@
+MODULE_EXTRA_CPPFLAGS = @MODULE_EXTRA_CPPFLAGS@
 MPEGDecodeDelegate = @MPEGDecodeDelegate@
 MPEGEncodeDelegate = @MPEGEncodeDelegate@
 MVDelegate = @MVDelegate@
@@ -293,6 +295,8 @@ LIBMAGICK = ../magick/libMagick.la
 @WITH_MODULES_FALSE@pkg_LTLIBRARIES = 
 @WITH_MODULES_TRUE@MODULECOMMONFLAGS = -no-undefined -module -avoid-version
 @WITH_MODULES_FALSE@MODULECOMMONFLAGS = 
+
+AM_CFLAGS = @MODULE_EXTRA_CPPFLAGS@
 
 # ART module
 art_la_SOURCES = art.c
