--- a/coders/Makefile.am
+++ b/coders/Makefile.am
@@ -100,6 +100,8 @@ pkg_LTLIBRARIES =
 MODULECOMMONFLAGS     =
 endif # WITH_MODULES
 
+AM_CFLAGS = @MODULE_EXTRA_CPPFLAGS@
+
 # ART module
 art_la_SOURCES      = art.c
 art_la_LDFLAGS      = $(MODULECOMMONFLAGS)
