--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -143,6 +143,7 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
 LIBEXEC_DIR = @LIBEXEC_DIR@
 LIBLTDL = @LIBLTDL@
+LIBRARY_EXTRA_CPPFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
 LIBSTDCLDFLAGS = @LIBSTDCLDFLAGS@
 LIBTOOL = @LIBTOOL@
 LIB_BZLIB = @LIB_BZLIB@
@@ -187,6 +188,7 @@ MANDelegate = @MANDelegate@
 MAN_DIR = @MAN_DIR@
 MICRO_VERSION = @MICRO_VERSION@
 MINOR_VERSION = @MINOR_VERSION@
+MODULE_EXTRA_CPPFLAGS = @MODULE_EXTRA_CPPFLAGS@
 MPEGDecodeDelegate = @MPEGDecodeDelegate@
 MPEGEncodeDelegate = @MPEGEncodeDelegate@
 MVDelegate = @MVDelegate@
@@ -247,6 +249,8 @@ ALLMANPAGES = Magick-config.1
 libMagick_la_LDFLAGS = -no-undefined \
 	-version-info $(MAJOR_VERSION):$(MINOR_VERSION)$(MICRO_VERSION):0
 
+
+AM_CFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
 
 # Library base sources
 MAGICK_BASE_SRCS = memory.c blob.c cache.c error.c monitor.c constitute.c \
@@ -310,7 +314,7 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 @WITH_MODULES_TRUE@libMagick_la_DEPENDENCIES = \
 @WITH_MODULES_TRUE@	$(top_builddir)/ltdl/libltdlc.la
 @WITH_MODULES_FALSE@libMagick_la_DEPENDENCIES = ../coders/libCoders.la
-am__objects_1 = memory.lo blob.lo cache.lo error.lo monitor.lo \
+am__objects_3 = memory.lo blob.lo cache.lo error.lo monitor.lo \
 	constitute.lo image.lo list.lo color.lo quantize.lo segment.lo \
 	zoom.lo transform.lo shear.lo enhance.lo effect.lo decorate.lo \
 	annotate.lo type.lo draw.lo render.lo montage.lo semaphore.lo \
@@ -318,12 +322,12 @@ am__objects_1 = memory.lo blob.lo cache.lo error.lo monitor.lo \
 	magic.lo magick.lo delegate.lo module.lo static.lo timer.lo \
 	utility.lo cache_view.lo stream.lo animate.lo display.lo \
 	widget.lo xwindow.lo PreRvIcccm.lo
-@WIN32_TRUE@am__objects_2 = nt.lo
-@WIN32_FALSE@am__objects_2 =
-@WITH_MODULES_TRUE@am_libMagick_la_OBJECTS = $(am__objects_1) \
-@WITH_MODULES_TRUE@	$(am__objects_2)
-@WITH_MODULES_FALSE@am_libMagick_la_OBJECTS = $(am__objects_1) \
-@WITH_MODULES_FALSE@	$(am__objects_2)
+@WIN32_TRUE@am__objects_4 = nt.lo
+@WIN32_FALSE@am__objects_4 =
+@WITH_MODULES_TRUE@am_libMagick_la_OBJECTS = $(am__objects_3) \
+@WITH_MODULES_TRUE@	$(am__objects_4)
+@WITH_MODULES_FALSE@am_libMagick_la_OBJECTS = $(am__objects_3) \
+@WITH_MODULES_FALSE@	$(am__objects_4)
 libMagick_la_OBJECTS = $(am_libMagick_la_OBJECTS)
 SCRIPTS = $(bin_SCRIPTS)
 
