--- a/Magick++/lib/Magick++/Makefile.in
+++ b/Magick++/lib/Magick++/Makefile.in
@@ -191,6 +191,7 @@ TXTDelegate = @TXTDelegate@
 VERSION = @VERSION@
 WMFDecodeDelegate = @WMFDecodeDelegate@
 WWWDecodeDelegate = @WWWDecodeDelegate@
+WinPathScript = @WinPathScript@
 X_CFLAGS = @X_CFLAGS@
 X_EXTRA_LIBS = @X_EXTRA_LIBS@
 X_LIBS = @X_LIBS@
