Change ImageMagick web site URL.

--- a/coders/delegates.mgk.in
+++ b/coders/delegates.mgk.in
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <delegatemap>
   <delegate decode="autotrace" stealth="True" command='@AutotraceDecodeDelegate@ -output-format svg -output-file "%o" "%i"' />
-  <delegate decode="browse" stealth="True" spawn="True" command='@BrowseDelegate@ http://www.imagemagick.org/ImageMagick/'  />
+  <delegate decode="browse" stealth="True" spawn="True" command='@BrowseDelegate@ http://www.imagemagick.org/'  />
   <delegate decode="cgm" command='@CGMDecodeDelegate@ -d ps "%i" "%o" "%u"
     @ConvertDelegate@ -concatenate %o*.ps "%o"' />
   <delegate decode="dot" command='@DOTDecodeDelegate@ -Tps "%i" -o "%o"' />
